--- a/app/views/login/login.mustache
+++ b/app/views/login/login.mustache
@@ -3,7 +3,7 @@
 		<div class="col-md-7">
 			<div class="media center-block">
 				<a class="pull-left" href="#">
-					<img class="media-object img-circle" src="images/logo.png" >
+					<img class="media-object img-circle" src="app/images/logo.png" >
 				</a>
 				<div class="media-body slogan">
 					<blockquote class="blockquote-reverse">
