--- a/app/views/topbar/topbar.mustache
+++ b/app/views/topbar/topbar.mustache
@@ -45,12 +45,12 @@
 					</a>
 					<ul class="dropdown-menu" role="menu">
 						<li>
-							<a data-key="profile">
+							<a menu-key="profile">
 								Perfil
 							</a>
 						</li>
 						<li>
-							<a data-key="logout">
+							<a menu-key="logout">
 								Salir
 							</a>
 						</li>
