Agregando Gestion de Perfiles y Logout

--- a/app/views/login/login.mustache
+++ b/app/views/login/login.mustache
@@ -18,9 +18,9 @@
 				<h2 class="form-signin-heading">
 					{{title}}
 				</h2>
-				<input name="username" type="text" class="form-control" placeholder="Usuario" required="" autofocus="">
-				<input name="password" type="password" class="form-control" placeholder="Contraseña" required="">
-				<button class="btn btn-lg btn-primary btn-block signin" type="submit">
+				<input name="username" type="text" class="form-control" placeholder="Usuario" autofocus="">
+				<input name="password" type="password" class="form-control" placeholder="Contraseña">
+				<button class="btn btn-lg btn-primary btn-block signin" type="submit" data-loading-text="Ingresando...">
 					Ingresar
 				</button>
 			</form>
