--- a/app/views/common/profile.mustache
+++ b/app/views/common/profile.mustache
@@ -41,7 +41,7 @@
 							Contraseña Actual
 						</label>
 						<div class="col-sm-8">
-							<input type="password" class="form-control" name="currentPassword">
+							<input type="password" class="form-control" name="currentPassword" autofocus="">
 						</div>
 					</div>
 					<div class="form-group">
