--- a/app/views/ventas/tablaArticulos.mustache
+++ b/app/views/ventas/tablaArticulos.mustache
@@ -1,92 +1,69 @@
+<div class="panel panel-primary">
+	<div class="panel-heading">
+		<h3 class="panel-title">
+			Buscar producto
+			<a href="#"><span class="fa fa-minus pull-right"></a></span>
+		</h3>
+	</div>
+	<div class="panel-body">
+		<form class="form-horizontal" role="form" id="searchItems">
+			<div class="form-group">
+				<label for="nombre" class="col-sm-2 control-label">
+					Nombre
+				</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" name="name" attr-query="contains">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="codigo" class="col-sm-2 control-label">
+					Código
+				</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" name="code" attr-query="contains">
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
+					<button type="button" class="btn btn-primary pull-right search-records" data-loading-text="Buscando...">
+						<span class="fa fa-search"></span>
+						Buscar
+					</button>
+				</div>
+			</div>
+		</form>
+	</div>
+</div>
 <h3>Resultado de la Busqueda</h3>
 <table class="table table-bordered">
 	<thead>
 		<tr>
-			<th>
-				Marca
-			</th>
-			<th>
-				Tipo
-			</th>
-			<th>
-				Modelo
+			<th attr-name="name">
+				Nombre
+				<i class="pull-right sort-table fa fa-sort-alpha-asc"></i>
 			</th>
 			<th>
 				Código
 			</th>
-			<th>
-				Descripción
-			</th>
-			<th>
+			<th attr-name="stock">
 				Stock
+				<i class="pull-right sort-table fa fa-sort-amount-asc"></i>
+			</th>
+			<th attr-name="marketPrice">
+				Precio
+				<i class="pull-right sort-table fa fa-sort-numeric-asc"></i>
 			</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr class="success">
-			<td>Samsung</td>
-			<td>TV LED</td>
-			<td>EH6030</td>
-			<td>TVLSAMEH6030</td>
-			<td>TV LED ideal para ver el mundial...</td>
-			<td><span class="text-danger">1</span></td>
-		</tr>
+		{{#each records}}
 		<tr>
-			<td>Samsung</td>
-			<td>TV LED</td>
-			<td>EH6020</td>
-			<td>TVLSAMEH6020</td>
-			<td>TV LED ideal para ver el mundial...</td>
-			<td><span class="text-warning">3</span></td>
+			<td>{{name}}</td>
+			<td>{{code}}</td>
+			<td>{{stock}}</td>
+			<td>{{marketPrice}}</td>
 		</tr>
-		<tr>
-			<td>Samsung</td>
-			<td>TV LED</td>
-			<td>EH6010</td>
-			<td>TVLSAMEH6010</td>
-			<td>TV LED ideal para ver el mundial...</td>
-			<td><span class="text-danger">1</span></td>
-		</tr>
-		<tr>
-			<td>Samsung</td>
-			<td>TV LED</td>
-			<td>EH5030</td>
-			<td>TVLSAMEH5030</td>
-			<td>TV LED ideal para ver el mundial...</td>
-			<td>6</span></td>
-		</tr>
-		<tr>
-			<td>Samsung</td>
-			<td>TV LED</td>
-			<td>EH5020</td>
-			<td>TVLSAMEH5020</td>
-			<td>TV LED ideal para ver el mundial...</td>
-			<td><span class="text-warning">3</span></td>
-		</tr>
-		<tr>
-			<td>Samsung</td>
-			<td>Home Theater</td>
-			<td>HT5020</td>
-			<td>HTLSAMEH5020</td>
-			<td>Sistema de Audio ideal para disfrutar...</td>
-			<td><span class="text-warning">4</span></td>
-		</tr>
-		<tr>
-			<td>Samsung</td>
-			<td>Home Theater</td>
-			<td>HT6020</td>
-			<td>HTLSAMEH6020</td>
-			<td>Sistema de Audio ideal para disfrutar...</td>
-			<td><span class="text-danger">1</span></td>
-		</tr>
-		<tr>
-			<td>Samsung</td>
-			<td>Home Theater</td>
-			<td>HT7020</td>
-			<td>HTLSAMEH7020</td>
-			<td>Sistema de Audio ideal para disfrutar...</td>
-			<td>5</td>
-		</tr>
+		{{/each}}
 	</tbody>
 </table>
 <div class="center-block">
