Agregado Wizard - Prueba

--- a/app/views/ventas/ventas.mustache
+++ b/app/views/ventas/ventas.mustache
@@ -13,7 +13,7 @@
 						</a>
 					</h3>
 				</div>
-				<table class="table">
+				<table class="table" id="itemCart">
 					<thead>
 						<tr>
 							<th>#</th>
