--- a/app/styles/aleph.css
+++ b/app/styles/aleph.css
@@ -1,6 +1,8 @@
-#main-content, #main-content .slogan
+#main-content,
+#page-content,
+#main-content .slogan
 {
-	padding-top: 50px;
+	padding: 60px 0px 50px 0px;
 }
 
 .noty-icon {
