--- a/app/styles/login.css
+++ b/app/styles/login.css
@@ -1,7 +1,7 @@
 body {
   background-color: #eee !important;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #eee;
 }
 
@@ -29,13 +29,13 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="text"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+
+#main-content {
+  padding-top: 30px;
 }
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+
+.form-horizontal .has-feedback .form-control-feedback {
+  right: 0px;
+  font-size: 1.2em;
+  top: 10px;
 }
