--- a/src/styles.less
+++ b/src/styles.less
@@ -33,3 +33,9 @@ a {
 .modal .innter-footer-fix {
 	margin: 10px -20px -10px;
 }
+
+.tab-pane {
+	padding: 15px;
+	border: 1px solid #ddd;
+	border-top: 0px;
+}
