Gestion de articulos + Proveedores

--- a/src/home/home.less
+++ b/src/home/home.less
@@ -84,6 +84,10 @@ aleph-home {
     display: none;
 }
 
+button.cancel {
+	margin-right: 10px;
+}
+
 .tree li {
     text-indent: 20px;
     line-height: 20px;
@@ -224,4 +228,10 @@ p {
 
 main {
 	padding: 0px 10px 70px;
+}
+
+@media (min-width: 992px) {
+  .modal-lg {
+    width: 80%;
+  }
 }
