--- a/src/styles.less
+++ b/src/styles.less
@@ -39,3 +39,11 @@ a {
 	border: 1px solid #ddd;
 	border-top: 0px;
 }
+
+.label-tag {
+	padding: 0.5em;
+}
+
+.label-tag:not(:first-child) {
+	margin-left: 10px; 
+}
