--- a/src/ventas/nueva_venta/nueva_venta.less
+++ b/src/ventas/nueva_venta/nueva_venta.less
@@ -9,3 +9,22 @@ aleph-ventas-nueva-venta {
 .report-type .form-control {
 	margin-left: 15px;
 }
+
+td.tall-td {
+    line-height: 2.3 !important;
+}
+
+.padded-box {
+	padding: 21px 15px 21px 0px;
+}
+
+.padded-box-2 {
+	padding: 21px 0px;
+}
+
+p.label {
+	padding: 10px 15px;
+    font-size: 15px;
+    line-height: 1.5;
+    display: block;
+}
