--- a/src/ventas/registros_venta/registros_venta.less
+++ b/src/ventas/registros_venta/registros_venta.less
@@ -2,4 +2,26 @@ aleph-ventas-registros-venta {
 	display: block;
 }
 
+.modal-body legend {
+	font-size: 1.1em;
+	border-bottom: 1px solid #ccc;
+}
 
+td.tall-td {
+    line-height: 2.3 !important;
+}
+
+.padded-box {
+	padding: 21px 15px 21px 0px;
+}
+
+.padded-box-2 {
+	padding: 21px 0px;
+}
+
+p.label {
+	padding: 10px 15px;
+    font-size: 15px;
+    line-height: 1.5;
+    display: block;
+}
