--- a/src/home/home.less
+++ b/src/home/home.less
@@ -241,3 +241,13 @@ table a {
 	padding-left: 5px;
 	padding-right: 5px; 
 }
+
+
+.label-tag {
+	padding: 0.5em;
+	display: inline-block;
+}
+
+.label-tag:not(:last-child) {
+	margin-right: 10px; 
+}
