--- a/src/ventas/registros_venta/registros_venta.less
+++ b/src/ventas/registros_venta/registros_venta.less
@@ -25,3 +25,11 @@ p.label {
     line-height: 1.5;
     display: block;
 }
+
+.dl-small dt {
+	width: 100px;
+}
+
+.dl-small dd {
+	margin-left: 120px;
+}
