Orden de Compra

--- a/src/compras/nueva_oc/nueva_oc.less
+++ b/src/compras/nueva_oc/nueva_oc.less
@@ -6,30 +6,39 @@ aleph-compras-nueva-oc {
 	padding-top: 15px;
 }
 
-.division {
-	margin: 20px 0px;
-	height: 10px;
-	border-bottom: 1px solid #ddd;
-}
-
-.filters .form-inline .form-control {
-	width: 100%;
-}
-
-.total {
-	font-size: 1.3em;
-}
-
-.detail {
-	display: block;
-	font-size: 1em;
-	margin-bottom: 10px;
-}
-
 .order button {
-	margin: 20px 0;
+	margin: 20px 10px 0px 0px;
 }
 
-button.padded-right {
-	margin-right: 10px;
+.padded-box {
+	padding: 21px 15px 21px 0px;
+}
+
+.padded-box-2 {
+	padding: 21px 0px;
+}
+
+p.label {
+	padding: 10px 15px;
+    font-size: 15px;
+    line-height: 1.5;
+    display: block;
+}
+
+dl.small dt {
+	width: 80px;
+}
+
+dl.small dd {
+	margin-left: 90px;
+}
+
+h4 {
+	margin-top: 0px;
+	margin-bottom: 15px;
+	border-bottom: 1px solid #ccc;
+}
+
+.not-padded-top {
+	margin-top: 10px;
 }
