registros nueva oc

--- a/src/compras/nueva_oc/nueva_oc.less
+++ b/src/compras/nueva_oc/nueva_oc.less
@@ -33,12 +33,12 @@ dl.small dd {
 	margin-left: 90px;
 }
 
-h4 {
+h4.text-underline {
 	margin-top: 0px;
 	margin-bottom: 15px;
 	border-bottom: 1px solid #ccc;
 }
 
-.not-padded-top {
+h4.not-padded-top {
 	margin-top: 10px;
 }
