--- a/src/compras/registros_oc/registros_oc.less
+++ b/src/compras/registros_oc/registros_oc.less
@@ -2,3 +2,15 @@ aleph-compras-registros-oc {
 	display: block;
 }
 
+a.disabled {
+	pointer-events:none;
+}
+
+a.disabled i {
+	color: #ccc;
+}
+
+.text-action {
+	cursor: pointer;
+	text-decoration: underline;
+}
